journal/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: journal.kube.cloud.rintd.ru
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fileserver
            port:
              number: 80
